--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,17 +6,11 @@
     <title>QuickCart - Premium E-commerce Shopping Experience</title>
     <meta name="description" content="Discover amazing products at unbeatable prices. Shop from thousands of premium products with lightning-fast delivery. Your satisfaction is our guarantee." />
     <meta name="author" content="QuickCart" />
-    <meta name="keywords" content="e-commerce, online shopping, premium products, fast delivery, best prices" />
 
-    <meta property="og:title" content="QuickCart - Premium E-commerce Shopping" />
-    <meta property="og:description" content="Shop premium products with lightning-fast delivery and unmatched quality" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1472851294608-062f824d29cc?w=1200" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="QuickCart - Premium Shopping" />
-    <meta name="twitter:description" content="Discover amazing products at unbeatable prices" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1472851294608-062f824d29cc?w=1200" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+
   </head>
 
   <body>
